--- a/src/multiSelectDropDown/components/list/style.module.scss
+++ b/src/multiSelectDropDown/components/list/style.module.scss
@@ -1,4 +1,13 @@
-.main {
+.list {
   padding: 10px;
   background: grey;
+  position: absolute;
+  z-index: 2;
+  top: 50px;
+  left: 0;
+  min-height: 200px;
+  max-height: 500px;
+  width: 100%;
+  overflow-y: scroll;
+  outline: red;
 }
