--- a/src/multiSelectDropDown/components/list/style.module.scss
+++ b/src/multiSelectDropDown/components/list/style.module.scss
@@ -1,13 +1,32 @@
-.list {
-  padding: 10px;
-  background: grey;
+.wrapper {
   position: absolute;
   z-index: 2;
   top: 50px;
   left: 0;
-  min-height: 200px;
-  max-height: 500px;
+  padding: 15px 5px;
   width: 100%;
-  overflow-y: scroll;
-  outline: red;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.4);
+  border-radius: 15px;
+  background: white;
+
+  .list {
+    min-height: 100px;
+    max-height: 200px;
+    overflow-y: scroll;
+    padding: 0 5px;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+    &::-webkit-scrollbar-track {
+      background: transparent;
+      border-radius: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #d5d5d5;
+      border-radius: 5px;
+    }
+  }
 }
