feature(multi select drop down list): implement the component

--- a/src/app/style.module.scss
+++ b/src/app/style.module.scss
@@ -1,10 +1,10 @@
 .main {
-  min-height: 1000px;
+  min-height: 760px;
   background-color: white;
+  padding-top: 50px;
 
   .wrapper {
     width: 300px;
-    padding: 10px;
-    border: 1px solid red;
+    margin: auto;
   }
 }
