--- a/src/multiSelectDropDownList/components/list/style.module.scss
+++ b/src/multiSelectDropDownList/components/list/style.module.scss
@@ -12,8 +12,7 @@
   background: white;
 
   .list {
-    min-height: 100px;
-    max-height: 200px;
+    height: 200px;
     overflow-y: scroll;
     padding: 0 5px;
 
